refactor(trace): drop the unreachable empty-span branch from findRootSpan
map() returns before it on an empty span list, so the only caller hands it a
non-empty one.